<resources>
    <string name="app_name">Wakala</string>
    <string name="sign_in_required">Sign in to continue..</string>
    <string name="loading">Loading..</string>
    <string name="sign_in_failed">Sign in failed. Please try again!</string>
    <string name="sign_in_canceled">Progress canceled! Please try again to continue.</string>
    <string name="network_error">Please check your network then try again.</string>
    <string name="sign_in_successful">Welcome, %UserDisplayName% !</string>
    <string name="button_text_sign_in_with_google">Sign in with Google</string>
    <string name="nav_home">Start</string>
    <string name="nav_news">News</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_me">Me</string>
    <string name="toast_exit_message">Press Back once more to exit.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="des_review_personal_information">Review personal information</string>
    <string name="name_label">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="tip_active_hours">Number of active hours</string>
    <string name="tip_finished_distance">Finished distance</string>
    <string name="button_save_changes">Save changes</string>
    <string name="msg_me_data_failed">Failed to get your information</string>
    <string name="gender_female">Female</string>
    <string name="gender_unknown">Other</string>
    <string name="gender_male">Male</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_dob">Date of birth</string>
    <string name="msg_applied_changes">Changes applied!</string>
    <string name="helper_date_type">DD/MM/YYYY</string>
    <string name="dp_select_date">Select date</string>
    <string name="nav_history">History</string>
    <string name="msg_operation_failure">Operation failed!</string>
    <string name="msg_read_data_failure">Failed to get data!</string>
    <string name="msg_update_data_failure">Failed to update data!</string>
    <string name="msg_delete_data_failure">Failed to delete data!</string>
    <string name="item_leave_group">Leave group</string>
    <string name="hint_full_name">Full name</string>
    <string name="group_app_bar_title">Your group</string>
    <string name="multiple_options_hint">Or</string>
    <string name="join_a_group_button">Join a group</string>
    <string name="create_a_new_group_button">Create one</string>
    <string name="have_not_joined_a_group">You haven\'t participated in a group.</string>
    <string name="button_join_group">Join group</string>
    <string name="hint_group_id">Group ID</string>
    <string name="des_dismiss_button">Dismiss button</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>