<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <import type="android.view.View"/>
        <variable
            name="group"
            type="com.kraken.wakala.dtos.Group" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/vector_background"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:visibility="@{group.id.empty ? View.VISIBLE : View.GONE}">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/have_not_joined_a_group"
                android:textColor="?colorOnPrimary"
                android:textSize="18sp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TonalButton"
                android:id="@+id/button_join_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:text="@string/join_a_group_button"
                android:textSize="18sp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/multiple_options_hint"
                android:textColor="?colorOnPrimary"
                android:textSize="18sp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/button_create_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_group_button"
                android:textSize="16sp"/>

        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{group.id.empty ? View.GONE : View.VISIBLE}">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    style="?attr/collapsingToolbarLayoutLargeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
                    app:layout_scrollFlags="scroll|snap"
                    app:expandedTitleTextColor="?attr/colorOnPrimary"
                    app:collapsedTitleGravity="center_vertical"
                    app:titleCollapseMode="scale">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar_page_header"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:elevation="18dp"
                        app:title="@string/group_app_bar_title"
                        app:menu="@menu/menu_group_page_toolbar">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9dp"
                            android:layout_marginBottom="0dp"
                            android:layout_gravity="end"
                            android:visibility="@{group==null?View.INVISIBLE:View.VISIBLE}">
                            <ImageButton
                                android:id="@+id/button_add_member"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="12dp"
                                android:scaleType="fitCenter"
                                android:background="@android:color/transparent"
                                android:src="@drawable/icons8_add_member_48px" />
                            <ImageButton
                                android:id="@+id/button_pending"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:padding="12dp"
                                android:scaleType="fitCenter"
                                android:background="@android:color/transparent"
                                android:src="@drawable/icons8_pending_48px" />
                        </LinearLayout>
                    </com.google.android.material.appbar.MaterialToolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_group_member_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:background="@drawable/round_top_background"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>

</layout>
