<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:gravity="center"
            android:text="Join a group"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_close_dialog"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/button_close_dialog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/icons8_close_48px"
            android:contentDescription="@string/des_dismiss_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?colorOnBackground" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/text_field_rounded_box_corner"
            android:id="@+id/text_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/hint_group_id"
            app:hintTextColor="?colorOnBackground"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintTop_toBottomOf="@id/button_close_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="12dp"
            android:text="@string/button_join_group"
            app:layout_constraintTop_toBottomOf="@id/text_group_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/button_join"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

